correcting margin overshoot on collapsable nav bar

--- a/css/resume.css
+++ b/css/resume.css
@@ -204,7 +204,7 @@ a:hover, a:focus, a:active {
   padding-left: 0.25rem  !important;
 
 
-  margin-right: 10rem !important;
+  margin-right: 0.5rem !important;
   /* margin-left: 1rem  !important; */
 
 
